--- a/reconstruction.rmd
+++ b/reconstruction.rmd
@@ -148,73 +148,63 @@ Patel introduced the new 'personal relevance model' with a data graphic familiar
 
 The models Patel mentioned are all 'classifiers,' predictive models that 'classify' particular outcomes by calculating their probability of membership of some class of outcome.  Much of the core architecture of the machine learning classifiers received glancing reference in Patel's presentation. In DunnHumby's work, the classifier at the heart of the recommender system calculates for a given customer the most likely products to be purchased.  The predicted classes are binary: `recommended` or `not recommended.` Products are allocated to one of these classes depending on their calculated probability. A probability greater than `0.5` typically would be `recommended.`  The logistic regression model generates probabilities of purchase for each product for each customer. The fundamental  shift  here is that the classifier model extends the reach of  the recommendations generated for a customer to not only  the 250,000 items in the Tesco inventory but to any item, relationship, similarity or event that can be constructed as a variable in the classifier model. In this sense, the recommendations shown to a customer in the 'Have You Forgotten' list derive from an intricate conditional probability statement, woven from, as we will soon see, an open-ended field of relations.
 
-## Repeating sufficiently often to measure
+## Repeating sufficiently often to matter
 
-I will not discuss in detail the different dimensions of probabilisation implicit in the architecture of the new model. It is worthwhile, however, highlighting some key elements that point directly to the troubled notion of 'personal relevance' and personalization more generally. These include the problem of repetition, attempts to create new views of the data, experiments on the platform, and the temporalities of calculation.      
+I will not discuss all the dimensions of probabilisation implicit in the architecture of the new model but highlight those elements that trouble the notion of 'personal relevance' and personalization more generally. These include the problem of repetition and temporality of calculation,  experiments on the platform,  and attempts to create new views of the data.      
 
-One fundamental difficulty here is that the propensity of a customer to buy a recommended product at a particular point in time is changing. Popper's notion of probabilities as propensities as tendencies to realization inherent in a situation directly implies this.  Measuring propensities and expressing these measurements as numbers between `0` and `1` becomes difficult because the situation is change and the propensities themselves change. As Popper observes, 'the propensities cannot be measured because the relevant situation changes and cannot be repeated' [@Popper_1990, 17]. No doubt the contingencies associated with grocery shopping are legion, perhaps more so than other kinds of products (books, music, films),  and any attempt to measure propensities associated with particular commodities  will encounter many dynamic changes.
+One fundamental difficulty is that the propensity of a customer to buy a recommended product changes. Popper's notion of probabilities as tendencies to realization inherent in a situation implies this.  As Popper observes, 'the propensities cannot be measured because the relevant situation changes and cannot be repeated' [@Popper_1990, 17]. Measuring propensities and expressing these measurements as numbers between `0` and `1` becomes difficult because as a situation changes,  the propensities themselves change. No doubt the contingencies associated with grocery shopping are legion, perhaps more so than other kinds of products (books, music, films),  and any attempt to measure propensities associated with particular commodities  will encounter many changes.
 
-One way in which recommender systems attempt to address the problem of the relational dynamics of propensities is by looking for repetitions. Patel mentioned that the new model uses  '52 weeks of data' for each customer. In including this data in the model, the assumption is that the probability that a specific customer will buy a specific product will be shaped by previous purchases. The history of previous purchases constitutes forms of repetition that imply a stabilisation of propensities (high or low; e.g. a vegan customer will never have purchased chicken products, so the measured propensities for any of the 1000 or so chicken products sold be Tesco will remain close to `0`).     
+One way in which recommender systems attempt to address the problem of the relational dynamics of propensities is by assuming that purchases will be repeated.   Patel mentioned that the new model uses  '52 weeks of data' for each customer. In including this data in the model, the assumption is that the probability that a specific customer will buy a specific product will be increased by previous purchases of that product. The history of previous purchases constitutes forms of repetition that imply a stabilisation of propensities (high or low; e.g. a vegan customer will never have purchased chicken products, so the measured propensities for any of the 1000 or so chicken products sold be Tesco will remain close to `0`). But the changing situation of the customer only figures here in the accumulated year of purchase data.     
 
-When the logistic regression model includes the 52 weeks of previous purchases, the conditional probability calculation undertaken by the recommender system ramifies tremendously in several respects. Each of Tesco's 200,000 products becomes a variable in the classifier. Practically, most of the these variables will not influence the calculation of the probabilities for recommendations very much. As Patel observed,  again assuming that this would be obvious to the audience of data scientists,  'we have lots of zeros'.  -- points to the difficult terrain of  'good feature' thinking: the vast, nearly empty matrix of customer-product associations. Given that most things in Tesco remain relatively unknown to each other and to customers. A matrix that records associations between individual people and different products is bound to be mostly empty. Say Tesco has 1 million online customers. Each online  shopper has bought some selection of the 200,000 products. The customer-product data matrix will be `r format(1e6 * 2e5)` in size.  The product-customer matrix, the basic vector-space in which all recommender systems operate, remains very sparse and unpopulated. Given that any one customer is likely to only have bought 100 or so different products, the probability matrix will be close to `r format(100-(100/2e5)*100, 2)`% empty. The data is, as Patel put it, 'massively unbalanced' (any dataset where the items of interest are much rarer than some normal values is said to be unbalanced) and such imbalance would heavily bias the recommender system towards common and only impersonally relevant suggestions, suggestions that might  not produce the desired conversion experience.
+When the logistic regression model includes the 52 weeks of previous purchases, the conditional probability calculation undertaken by the recommender system ramifies tremendously in several respects. Potentially, each of Tesco's 200,000 products becomes a variable in the classifier. We can imagine this as an arithmetic sum extending along a series of 200,000 terms.   Practically, most of the these variables will only slightly influence the sum of the probabilities for recommendations since most customers will have purchased only a fraction of the inventory. As Patel observed,  again assuming that this would be obvious to the audience of data scientists,  'we have lots of zeros'.   A matrix that records associations between individual people and products is bound to be mostly empty. Say Tesco has 1 million online customers. Each online  shopper has bought some selection of the 200,000 products. The customer-product data matrix will be `r format(1e6 * 2e5)` in size.  The product-customer matrix, the basic vector-space in which all recommender systems operate, remains very sparse and unpopulated. Given that any one customer is likely to only have bought 100 or so different products, the  matrix contain  `r format(100-(100/2e5)*100, 2)`% zero probabilities.
+
+Any dataset where the items of interest are much rarer than other values is said to be 'unbalanced.' The purchase history data is, as Patel put it, 'massively unbalanced,' and imbalance heavily biases the model towards common and somewhat impersonal suggestions, suggestions that might  not produce the desired conversion experience for either the individual customer or DunnHumby's renovation of Tesco's recommender system. Since so many people buy milk, the recommendation system might end up always recommending milk. So the data needs to be 'corrected' by, as Patel reports, removing -- 'under-sampling' -- some of the data for common purchases. 'Having all the data,' one of the anchoring claims of big data conversion narratives, also creates the need to delete some data.     
+
+The problem of repetition, the fact that situations change and therefore propensities change too, is known to designers of recommender systems. But they do not have the ideal conditions envisaged in probability theory (unbiased coins, flipped any number of times).  The model's own operation as a data-intensive calculation need to be adjusted to the scale of values of grocery retail, to the available computational, database and network infrastructures, and to the capacities of the online grocery system to inject recommendations into the flow of grocery orders in a timely fashion.  While raw data from Tesco Online transactions  feeds into the model's dataset  every hour, a recommendation list for each customer is only generated once a week. Customers shop online every few days at the most, and in some cases, only every few weeks. To update the top 200 recommendations for several millions customers  demands much computation. Patel briefly mentioned  specific infrastructural elements such as `hadoop` [@ApacheSoftwareFoundation_2009].
+
+The possibility of adjusting the recommendations for each customer every week depends on an infrastructure capable of collecting data, and assimilating that data in a predictive model.  'Personal relevance' depends on a matrix of probabilities of associations between people and things that shifts in time.  `Hadoop` and its legion of 'big data' variants (`mahout`, `spark`, `hive`, `pig`, `yarn`) operationalise repetition at an infrastructural rather than analytic scale. Patel's quick gloss of the infrastructural deployment of DunnHumby's relevancy model is  primary to the conversion event: the logistic regression model at the heart of the recommender system is no longer an analytical device but an operational one because it seeks to revise recommendations as situations change. [TBA: this paragraph is promising but doesn't deliver yet] 
 
 
-```{r sparsity-ex, echo=FALSE, cache=TRUE, fig.margin=FALSE, fig.cap ='Sparsity of the customer-product association matrix' }
-library(ggplot2)
-library(reshape2)
-p = as.logical(rbinom(n=2e5, size=20,0.001 ))
-m = (matrix(p, nrow=1000, byrow=TRUE))
-melted <- melt(m)
-melted$value <- as.logical(melted$value)
-ggplot(melted, aes(x = Var2, y = Var1, fill = value)) + geom_tile() +
-    scale_fill_manual(values = c("grey", "red")) + xlab('Customer id') + ylab('Product id') + theme(legend.position='none')
-```
+## Platform experiments reduce interfering propensities
 
-Since so many people buy milk, the recommendation system might end up always recommending milk products. So the data needs to be 'corrected' by, as Patel reports, removing -- under-sampling -- some of the data for common purchases.   Secondly, even if a recommendation system finds uncommon items that are good recommendations, they should neither be too cheap ('low spend'), nor, as we will see too similar to what the customer has already ordered.
-
-Many other slight adjustments, tweaks and local modifications would probably occur around the logistic regression model. The model's recommendations themselves have propensities that need to be adjusted to the scale of values of grocery retail, to the available infrastructures, and to the capacities of the online grocery system to merge recommendations into a grocery order in a timely fashion.  While raw data from Tesco Online feeds into the model every hour, a recommendation list for each customer is only generated once a week. Customers only shop online every few days at the most, and in some cases, only every few weeks. To continually update the top 200 recommendations for every customer would be computationally expensive. Patel briefly mentioned  specific infrastructural elements such as `hadoop` [@ApacheSoftwareFoundation_2009]. The logistics of running a predictive model affect listing practices.  The possibility of adjusting the recommendations for every customer weekly derives from an infrastructure capable of collecting data, assimilating that data to a predictive model able to generate approximately 200 million relevant recommendations, where 'relevance' depends on a matrix of probabilities of associations between people and things that shifts in time.  `Hadoop` and its legion of 'big data' variants (`mahout`, `spark`, `hive`, `pig`, `yarn`) operationalise flows of data at an infrastructural rather than analytic scale. In many respects, the quickly glossed-over infrastructural deployment of DunnHumby's relevancy model is the primary conversion event: the logistic regression model at the heart of the recommender system is no longer an analytical device but an operational one.
-
-## Platform Experiments that reduce interfering propensities
-
-In his account of probabilities as physical propensities, Popper emphasises the specific configurations established in laboratory experiments:
+In his account of probabilities as physical propensities, Popper emphasises why laboratory experiments are important to probability:
 
 > experiments work ... by creating, at will, artificial conditions that either exclude, or reduce to zero, all the interfering and disturbing propensities [@Popper_1990,23].
 
-Like many accounts of laboratory practice [@Latour_1097; @Rheinberger, @Knorr-Cetina; @Lynch - epistopics ref], Popper understands experiments as stabilizing the conditions so that phenomena can be saved from their own variability. Experiments play an important role in conversion events, or in the process of bring new predictive models to bear on shopping practice. A  crucial consideration for a predictive model in a recommender system will be how to experimentalize its own predictions so that they are not interfered with or disturbed by other propensities. This is obviously an inordinately difficult challenge, since, as we have seen, grocery shopping takes place at the intersection of normative and actual social orders, individual and group belongings, and logistically global economic processes.  
+Like the accounts of laboratory practice provided by science studies [@Latour_1097; @Rheinberger, @Knorr-Cetina; @Lynch_1994], Popper understands experiments as stabilizing the conditions so that probabilities become less variable. Experiments play an important role in conversion events, or in the process of bring new predictive models to bear on shopping practice. A crucial consideration for  a recommender system designer will be how to experimentalize the systems recommendations so that they are not disturbed by other propensities. This is an inordinately difficult challenge, since, as we have seen, grocery shopping takes place at the intersection of normative and actual social orders, individual and group belongings, and logistically global economic processes. 
 
 |Test A|Test B|
 |------|------|
 |Control A|Control B|
-|------|------|
+---------------------
 
-Nonetheless, experimentalization, the practice of creating conditions that reduce disturbing propensities, is very much part of the convernsion between models. For instance, the predictions of the recommender system themselves are the subject of experimental. Patel described the deployment of  the relevancy model experimentally in a random A/B controlled trial on the Tesco website. All customers were  allocated to one of four categories as shown in the table. In the  A/B trial,  an identical shopping list, or even the same person, might receive recommendations from different models.   The randomised application of  competing predictive models, draws on protocols for randomised clinical trials first developed in the 1960's, and is widely used in social media platforms and hence in the implementation and observation of the effects of recommender systems.[^238.1] Random allocation of customers to the four categories (Test A, Test B, Control A, Control B) adds a layer of probability to the recommender system in the name of statistical validation of the effects or the 'uplift' of the model.[^122] Ironically,  the effects of a predictive model cannot be known in advance. They can only be observed experimentally.
+Experimentalization, the practice of creating conditions that reduce disturbing propensities, runs deep in the conversion event.  The predictions of the recommender system themselves are the subject of experiment. Patel described the deployment of  the personal relevance model in a random A/B controlled trial on the Tesco website. All customers were  allocated to one of four categories as shown in  table. In the  A/B testing,  customers  receive recommendations from different models (the old recommender systems vs. the new one; a logistic regression model vs. a random forest model, etc.).   The randomised application of  competing predictive models, draws on protocols for randomised clinical trials first developed in the 1960's, and is widely used in social media platforms and hence in the implementation and observation of the effects of recommender systems.[^238.1] Random allocation of customers to the four categories (Test A, Test B, Control A, Control B) adds a layer of probability to the recommender system in the name of statistical validation of the effects or the 'uplift' of the model.[^122] Ironically,  the effects of a predictive model cannot be known in advance. They can only be observed experimentally.
 
-[^238.1]: It is difficult to gauge how much. Facebook reports that it has more than 1 million models operating in its infrastructure. [@Dunn_2016]
+[^238.1]: It is difficult to gauge how much. Facebook reports that it has more than 1 million models operating in its infrastructure [@Dunn_2016].[@Christian_2012] provides information on the extent of A/B testing in web and social media. 
 
-It is perhaps significant that this random allocation of customers to control and test groups occurs without any relation to the particular profile or propensities of the customer. It seeks to statistically validate the effects -- the *uplift* -- of the model on  conversion events by allowing the effects of the model on what people do to be measured. The uplift refers to conversion events associated with the same groups of people. Effectively an experiment in inhabiting two different worlds, the randomised control trial  sets up a feedback look between the predictive model (the logistic regression), and the world.
+Random allocation of customers to control and test groups occurs without taking individual propensities into account.  A/B testing  seeks to statistically validate effects -- the *uplift* -- of the model on  conversion rates by directly measuring the effects of the model on what people do.  The uplift refers to conversion events associated with the same groups of people. Effectively an experiment in creating micrologically different worlds, the randomised control trial  sets up a control mechanism that connects  the predictive model (the logistic regression), and the conversion event more broadly. With this experimentalisation, the conversion event narrative lacks grounding.[@TBA: not happy with this ending] 
 
 [^122]: See [@Lo_2002] for an introduction to the construction of experimental set ups for uplift models in marketing research. Market researchers and data miners seem to have started adopting a statistically-grounded experimental predictive practice around 2000. See for instance [@Almquist_2001]  Response modelling, 'propensity' modelling and uplift modelling all seek to identify associations between 'treatments' or interventions and the 'Responders', the people  affected by the treatment.
 
 ## The openness of the data: new features
 
-Whatever disturbing factors or interferences the experimental trials of different predictive models reduce, a broader and ineluctable stream of propensities remains in operation. Popper's account of probabilities as propensities presents openness as concomitant to realization:
+Whatever disturbing factors or interferences the experimental trials of different predictive models reduce, another stream of propensities runs away from the goal of personal relevance. Popper suggest that the realization of tendencies is open-ended:
 
->What may happen in the future .. is, to some extent, open. There are many possibilities trying to realize themselves, but few of them have a very high propensity, given the initial conditions [@Popper_1990, 22].
+>What may happen in the future ... is, to some extent, open. There are many possibilities trying to realize themselves, but few of them have a very high propensity, given the initial conditions [@Popper_1990, 22].
 
-There are different ways of reading this statement. We can read Popper as stating a truism,  the obvious consequence of his physicalist understanding of probabilities as tendencies inherent in a situation: anything can happen in the future. An alternative, perhaps more interesting reading  focuses on the pivotal phrase: 'possibilities trying to realize themselves.' What does 'trying to realize' might mean in practice? I would suggest that DunnHumby's work on the new personal relevance model, and much big data practice in general,  contains just such a 'trying to realize' in practice. 
+There are different ways of reading this statement. We can read Popper as stating a truism,  an obvious consequence of his physicalist understanding of probabilities as tendencies inherent in a situation: anything can happen in the future. An alternative, perhaps more interesting reading  focuses on the pivotal phrase: 'possibilities trying to realize themselves.' What might 'trying to realize' mean in practice? DunnHumby's work on the personal relevance model, and much big data practice in general, presents just such a 'trying to realize' in practice. 
 
-Several times in her presentation, Patel emphasized the importance of 'constructing good features' from the data, and much of her presentation concerned DunnHumby's efforts to construct 'good features.' A 'feature' in the context of machine learning refers to a variable included in a predictive model. A 'good feature' contributes to the accuracy, precision, specificity or any of the panoply of measures applied to machine learning models in practice. The construction of 'good features', however, remains open to many different possibilities, some of which are more practically feasible than others.
+Several times in her presentation, Patel emphasized the importance of 'good features' in the data, and much of her presentation concerned DunnHumby's efforts to construct 'good features.' A 'feature' in the context of machine learning and predictve modelling refers to a variable included in a predictive model [@Domingos_2012]. A 'good feature' contributes to the accuracy, precision, specificity or any of the other measures of prediction applied to machine learning models in practice. The construction of 'good features', however, remains open to many different possibilities, some of which are more practically feasible than others, and some of which are more aligned with personal relevance than others.
 
-The main efforts that DunnHumby made to  construct good features were not closely associated with personhood, but with the relations -- the propensities -- between things. Patel, for instance, addressed the problem of 'basket similarity.' The recommender system should not recommend items that are too similar to groceries already in a customer's basket. A customer might be willing to substitute a similar item for something they have already chosen, but they are more likely to accept a recommendation that complements rather than duplicates items in their list. How could the recommender system sense the possible similiarities and complementaries between things in general or for a given customer, especially since a person's sensibilities and susceptibilities concerning groceries will be subtly shaped by wider social groups, orderings and circumstances? 
+The main efforts that DunnHumby made to  construct good features were not closely focused on individuals  but sought to include  relations between things in the predictive model. Patel, for instance, described the problem of 'basket similarity.' The recommender system should not recommend items that are too similar to groceries already in a customer's basket. A customer might be willing to substitute a similar item for something they have already chosen, but they are more likely to accept a recommendation that complements already selected items. How could the recommender system avoid similiarities and  prefer complementaries between things for a given customer, especially since a person's sensibilities and susceptibilities concerning similarity and complementarity are shaped by social groups, orderings and circumstances? A predictive model could only do that if it had some sense of the relation between items already in the list and the products elsewhere.
 
-The predictive model could only do that if it had some sense of the relation between items already in the list and the field of possible recommendations. The 'personal relevance' model, therefore, sought to include the similarities and complementarities between items already ordered and recommendations. The DunnyHumby data scientists constructed a new feature from the data measuring substitutability and complementarity between products.  Taking all the baskets of items purchased, a new feature, what DunnyHumby termed 'self-learning substitutes' was derived. Added to the relevancy model, the 'self learning substitutes' feature adds another data matrix, the product similarity matrix, itself generated from all previous recommendations that have led to conversion events (that is, 'a user clicked as the response'). A customer's recommendation list might already include `Tesco Ginger Nuts 300g.`   The 'self-learning substitution model' seeks to replace list items with similar but higher value items: `Mcvitie's Ginger Moments 400g.` 
-The self-learning substitutes feature is complex. Patel mentioned that it took the form of a 'design matrix of 14,000 columns.' 14,000 new explanatory variables were added to the logistic regression model producing the recommendations. Each recommendation would be subtly re-weighted by this complex derived feature.[^215]
+The 'personal relevance' model sought to include the similarities and complementarities between items. The DunnyHumby data scientists constructed a new feature from the previous purchase data measuring substitutability and complementarity between products.  Taking all the baskets of items purchased on the basis of recommendations, they derived a  new feature, what DunnyHumby termed 'self-learning substitutes.' Added to the relevancy model, the 'self learning substitutes' feature adds another data matrix, the product similarity matrix, itself generated from all previous recommendations that have led to conversion events (that is, 'a user clicked as the response').  The self-learning substitutes feature is complex. Patel mentioned that it took the form of a 'design matrix of 14,000 columns.' 14,000 new explanatory variables were added to the logistic regression model.  Recommendation would be subtly re-weighted by this complex derived feature.[^215]
 
 [^215]: The proliferation of variables or features in the model itself introduces new instabilities, new 'possibilities trying to realize themselves' and the DunnyHumby data scientists used  '`L1 regularization` to drive coefficients down to zero', or, put more simply, to exclude variables there were not contributing much to the predictions produced by the model. Even this added feature does not exhaust DunnHumby's attempts to re-shape the recommender system. They were just beginning, Patel reported, to model complementarities between things. `Nutella` complements `bananas,` but the converse is not necessarily true since `bananas` need not complement `nutella,` especially if I have nut allergies.  From the standpoint of customer data science, Patel emphasised the operational significance of predicting complementarities:  'complementarity drives conversion.' 
 
 # F. Conclusion
 
-The personalization of recommendations has been a defining characteristic of many big data conversion events. The exploitative and discriminatory effects of all-consuming personalization have been the target of critics and critical research on data economies. The archaeology of the Tesco recommender system, including its early experiments with demographic data-mining, its adoption of a rule-based 'market basket' analysis system, and its current implementation of a 'personal relevance model' follows the trajectory of personalization.  
+The personalization of recommendations has been a distinctive characteristic in many big data conversion narratives and practice. The exploitative and discriminatory effects of personalization have rightly been the target of critics and critical research on data economies. The archaeology of the Tesco recommender system, including its early experiments with demographic data-mining, its adoption of a rule-based 'market basket' analysis system, and its current implementation of a 'personal relevance model' follows the trajectory of personalization.  
 
 The fact that the conversion event largely takes the form of personalization,  an individualizing personalization that is so patently ill-fit to the socially complex negotiations of grocery shopping, tends to obscure the wider re-framing of social order taking place.  on  the mappings that inscriptive devices such as shopping lists  display. Only because shopping is already somewhat ordered by lists can a partial re-mapping, provisionally conducive to new events, take place. The conversion entailed in this re-mapping is not just about personalization. It is more ontological than that since it includes relations running multi-laterally between people and things in time. It is less ontological, however, in that it is not a sudden transformation, but an ongoing process of adjusting, scaffolding, intervening and configuring orders.
 
